tests/fixtures/invalid/pow_dict_float_bool.py
# Cannot call pow() with Dict[str, int], Float, Bool
x = pow({"a": 1}, 1.0, True)
